--- a/DestroyNobots/DestroyNobots.csproj
+++ b/DestroyNobots/DestroyNobots.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Computers\BasicComputer.cs" />
     <Compile Include="Computers\InstructionSets.cs" />
     <Compile Include="Engine\Camera.cs" />
+    <Compile Include="Engine\DetailedTile.cs" />
     <Compile Include="Engine\Entities\Buildings\Radar.cs" />
     <Compile Include="Engine\Entities\Vehicles\Buggy.cs" />
     <Compile Include="Engine\Entities\Buildings\Building.cs" />
@@ -55,7 +56,10 @@
     <Compile Include="Engine\Entities\Vehicles\Vehicle.cs" />
     <Compile Include="Engine\Input\ActionKey.cs" />
     <Compile Include="Engine\Input\InputManager.cs" />
+    <Compile Include="Engine\Level.cs" />
     <Compile Include="Engine\TextureManager.cs" />
+    <Compile Include="Engine\Tile.cs" />
+    <Compile Include="Engine\TileSet.cs" />
     <Compile Include="IRenderable.cs" />
     <Compile Include="IUpdateable.cs" />
     <Compile Include="Program.cs" />
@@ -139,6 +143,7 @@
     </Content>
     <Content Include="Content\buggy.png" />
     <Content Include="Content\heightmap.png" />
+    <Content Include="Content\ts.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
