+ added IInputElement for event driven controls + added events for keyboard

--- a/DestroyNobots/DestroyNobots.csproj
+++ b/DestroyNobots/DestroyNobots.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Engine\DetailedTile.cs" />
     <Compile Include="Engine\Entities\Buildings\Radar.cs" />
     <Compile Include="Engine\Entities\EntityRenderer.cs" />
+    <Compile Include="Engine\Input\KeyboardEventArgs.cs" />
     <Compile Include="Engine\RendererServiceContainer.cs" />
     <Compile Include="Engine\IRenderer.cs" />
     <Compile Include="Engine\IRendererHolder.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="UI\EntitySelectionManager.cs" />
     <Compile Include="UI\GUI.cs" />
     <Compile Include="UI\EntitySelectionRenderer.cs" />
+    <Compile Include="Engine\Input\IInputElement.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
