--- a/DestroyNobots/DestroyNobots.csproj
+++ b/DestroyNobots/DestroyNobots.csproj
@@ -46,9 +46,13 @@
     <Compile Include="Computers\BasicComputer.cs" />
     <Compile Include="Computers\InstructionSets.cs" />
     <Compile Include="Engine\Camera.cs" />
+    <Compile Include="Engine\Entities\Collider.cs" />
+    <Compile Include="Engine\Collision\CollisionManager.cs" />
     <Compile Include="Engine\DetailedTile.cs" />
     <Compile Include="Engine\Entities\Buildings\Radar.cs" />
     <Compile Include="Engine\Entities\EntityRenderer.cs" />
+    <Compile Include="Engine\Region.cs" />
+    <Compile Include="Engine\Transform.cs" />
     <Compile Include="Engine\Input\IInputElementContainer.cs" />
     <Compile Include="Engine\Input\InputElementManager.cs" />
     <Compile Include="Engine\Input\KeyboardEventArgs.cs" />
@@ -56,7 +60,7 @@
     <Compile Include="Engine\Input\MouseEventArgs.cs" />
     <Compile Include="Engine\RendererServiceContainer.cs" />
     <Compile Include="Engine\IRenderer.cs" />
-    <Compile Include="Engine\IRendererHolder.cs" />
+    <Compile Include="Engine\IRendererServiceProvider.cs" />
     <Compile Include="Engine\Entities\Vehicles\Buggy.cs" />
     <Compile Include="Engine\Entities\Buildings\Building.cs" />
     <Compile Include="Engine\Entities\Entity.cs" />
@@ -159,6 +163,7 @@
     <Content Include="Content\heightmap.png" />
     <Content Include="Content\ts.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
