--- a/DestroyNobots/DestroyNobots.csproj
+++ b/DestroyNobots/DestroyNobots.csproj
@@ -160,6 +160,10 @@
       <Project>{8b5d4394-f83f-4554-8395-4fa7033fef7c}</Project>
       <Name>DestroyNobots.Assembler</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Farseer Physics Engine 3.5\Farseer Physics MonoGame.csproj">
+      <Project>{0aad36e3-51a5-4a07-ab60-5c8a66bd38b7}</Project>
+      <Name>Farseer Physics MonoGame</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="BuggyCode.txt">
