~ implemented generic assembler instructions + added automatic instruction loading from set for compiler ~ fixed instrcton finding in opcode set ~ changed AssemblerParameterValue to ImmediateValue + added AssemblerParameterValue

--- a/DestroyNobots.Assembler/DestroyNobots.Assembler.csproj
+++ b/DestroyNobots.Assembler/DestroyNobots.Assembler.csproj
@@ -46,7 +46,12 @@
   <ItemGroup>
     <Compile Include="AssemblerCompiler.cs" />
     <Compile Include="AssemblerInstruction.cs" />
-    <Compile Include="AssemblerParameterValue.cs" />
+    <Compile Include="AssemblerInstruction_Template.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AssemblerInstruction_Template.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ImmediateValue.cs" />
     <Compile Include="BinaryMultiplier.cs" />
     <Compile Include="Emulator\Computer.cs" />
     <Compile Include="Emulator\InterruptSignal.cs" />
@@ -67,8 +72,11 @@
     <Compile Include="Emulator\Registers\ProgramCounter.cs" />
     <Compile Include="IPointer.cs" />
     <Compile Include="IRuntimeContext.cs" />
+    <Compile Include="AssemblerParameterValue.cs" />
     <Compile Include="Pointer.cs" />
+    <Compile Include="PointerType.cs" />
     <Compile Include="ProgramMemoryReader.cs" />
+    <Compile Include="RegisterType.cs" />
     <Compile Include="SafeMemory.cs" />
     <Compile Include="UnsafeHGlobalMemory.cs" />
     <Compile Include="AssemblerOpcodeSet.cs" />
@@ -82,12 +90,19 @@
     <Content Include="AsmTest.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="AssemblerInstruction_Template.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>AssemblerInstruction_Template.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Compiler\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
