~ minor improvements and adjustments in assembler ~ StackPointer is no longer generic ~ memory generic operations now return size of read/wrote memory ~ ProgramCounter can now have other generic type than cpu + added Add and Substract methods for registers

--- a/DestroyNobots.Assembler/DestroyNobots.Assembler.csproj
+++ b/DestroyNobots.Assembler/DestroyNobots.Assembler.csproj
@@ -51,6 +51,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AssemblerInstruction_Template.tt</DependentUpon>
     </Compile>
+    <Compile Include="Emulator\Registers\IStackPointer.cs" />
     <Compile Include="ImmediateValue.cs" />
     <Compile Include="BinaryMultiplier.cs" />
     <Compile Include="Emulator\Computer.cs" />
